# pharmasense

./: .dockerignore  .env.template  .gitignore  Caddyfile  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  schema_manual.sql  seed_demo.py  seed_safety_blocks.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_v1_init_schema.py
backend/pharmasense/: exceptions.py  main.py
backend/pharmasense/config/: settings.py  snowflake.py
backend/pharmasense/dependencies/: __init__.py  auth.py  database.py
backend/pharmasense/models/: __init__.py  analytics_event.py  clinician.py  dose_range.py  drug_interaction.py  formulary.py  patient.py  prescription.py  prescription_item.py  safety_check.py  visit.py
backend/pharmasense/repositories/: analytics_event_repository.py
backend/pharmasense/routers/: __init__.py  admin.py  analytics.py  auth.py  chat.py  clinicians.py  health.py  ocr.py  patients.py  prescriptions.py  visits.py  voice.py
backend/pharmasense/schemas/: __init__.py  analytics.py  chat.py  common.py  formulary_service.py  (+8 more)
backend/seed/: seed-analytics-events.sql  seed-demo-clinician.sql  seed-demo-patients.sql  seed-demo-visits.sql  seed-dose-ranges.sql  seed-formulary.sql  seed-interactions.sql
backend/snowflake/: schema.sql
backend/tests/: test_analytics_service.py  test_formulary_service.py  test_models_and_seed.py  test_part2a_acceptance.py  test_part2b_acceptance.py  test_part2b_section11.py  test_prescription_service.py  test_prescriptions_router.py  test_rules_engine.py
(+126 files in other folders)
